fix: spacing bug and alignment on mob

--- a/templates/landingpage/content-elements/content/house-view-result-block/styles.css
+++ b/templates/landingpage/content-elements/content/house-view-result-block/styles.css
@@ -1,34 +1,34 @@
 .house-view-result-wrapper {
-    padding: 120px 0;
-    max-width: 900px;
-    width: 100%;
-    margin: auto;
+  padding: 120px 0;
+  max-width: 900px;
+
+  margin: auto;
 }
 .house-view-result-list {
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-    flex-wrap: wrap;
-    row-gap: 20px;
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  flex-wrap: wrap;
+  row-gap: 20px;
 }
 
 .result-wrapper {
-    margin-top: 30px;
+  margin-top: 30px;
 }
 .title-vote-wrapper {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .house-view-vote-item-text {
-    width: calc((100% - 8px) / 2);
+  width: calc((100% - 8px) / 2);
 }
 
 @media only screen and (max-width: 1023px) {
-    .house-view-vote-item-text {
-        width: 100%;
-    }
+  .house-view-vote-item-text {
+    width: 100%;
+  }
 
-    .house-view-result-wrapper {
-        padding: 60px 0 80px 0;
-    }
+  .house-view-result-wrapper {
+    padding: 60px 0 80px 0;
+  }
 }
